# konoha

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cmake/: add_icon_to_binary.cmake
src/: main.cpp
src/konoha/: __main__.py  application.py  genv.py
src/konoha/bridge/: __init__.py  ast_editor.py  astvm_helper.py  file_editor.py  file_url_helper.py  package_reloader.py
src/konoha/bridge/astvms/: __init__.py  astvm.py  expressions.py  root_nodes.py  statements.py
src/konoha/const/: app_const.py  path_const.py
src/konoha/data/view/: MainWindow.qml  OutputWindow.qml
src/konoha/data/view/CommonComponents/: SearchTextField.qml
src/konoha/data/view/ScratchComponents/: ASTVMAction.qml  ScratchContextMenu.qml  ScratchHandler.qml  ScratchScene.qml  ScratchSubContextMenu.qml  ScratchView.qml
src/konoha/data/view/ScratchComponents/Items/: CodeBlockNodeShape.qml  CodeBlockSnapIndicator.qml  Node.qml  NodeContentArgument.qml  NodeContentTextField.qml  NodeContextMenu.qml
src/konoha/editor/: ast_editor.py  file_editor.py
src/konoha/log/: log_manager.py  mock_stdout.py  output_window_handler.py  qt_message_handler.py
src/konoha/parser/: __init__.py  ast_extension.py  parser.py
src/konoha/utils/: __init__.py  advanced_qt_property.py  enhanced_qml_application_engine.py
src/qt_quick_python_tools/: assemble_application.py  code_sign.py  deploy.py  deploy_env.py  deploy_utils.py  freeze_module.py  generate_frozen_modules.py  python_config.py  qml_formatter.py  resource_compiler.py  shader_baker.py  translate.py
src/qt_quick_python_tools/spec/: darwin.spec  linux.spec  nuitka_spec.py  win32.spec
